2014-11-08 Paulo Andrade <pcpa@gnu.org>

	* check/ctramp.c: New file. It just repeats the test
	of tramp.tst, but using two jit_state_t, what should
	test possible issues with two contexts, and also validate
	jit_tramp works on backends with function descriptions.

	* check/Makefile.am: Update for new test case.

2014-11-03 Paulo Andrade <pcpa@gnu.org>

	* include/lightning/jit_mips.h: Do not make the t9 register
	JIT_R11 (or JIT_R7 for n32 or n64 abi) available. Previously
	it cause problems if one expects it to not be changed in a
	function call. For example, calling a jit function, where it
	really does not need to be changed.

2014-10-26 Paulo Andrade <pcpa@gnu.org>

	* lib/jit_aarch64.c, lib/jit_alpha.c, lib/jit_arm.c,
	lib/jit_hppa.c, lib/jit_ia64.c, lib/jit_mips.c, lib/jit_ppc.c,
	lib/jit_s390x.c, lib/jit_sparc.c, lib/jit_x86.c: Add an
	assertion to all code generation "drivers" to ensure
	_jitc->regarg is empty or in an expected state, after
	translation of a lightning instruction to native code.
	This change was a brute force test to find out other cases
	of a temporary not being release (like was happening with
	_bmsi and _bmci on x86), but no other case was found,
	after running make check, with assertions enabled, on all
	backends.

2014-10-26 Paulo Andrade <pcpa@gnu.org>

	* lib/jit_x86-cpu.c: Correct a register allocation leak in
	_bmsi and _bmci.

2014-10-25 Paulo Andrade <pcpa@gnu.org>

	* lib/jit_disasm.c: Do not cause an fatal error if init_jit
	fails in the jit_init_debug call.

2014-10-24 Paulo Andrade <pcpa@gnu.org>

	* lib/jit_ia64.c, lib/jit_ppc.c: Correct handling of function
	descriptor when first prolog is a jit_tramp prolog. The
	test case was using the same jit_context_t, so was not
	triggering this condition.

	* lib/jit_ppc-cpu.c: Properly handle jump displacements that
	do not fit on 24 powerpc. This required changing from previous
	"mtlr reg, blr" to "mtctr reg, bctr" to properly handle