@@ -1213,6 +1213,8 @@ _emit_code(jit_state_t *_jit)
 	patch_at(_jitc->patches.ptr[offset].inst, word);
     }
 
+    jit_flush(_jit->code.ptr, _jit->pc.uc);
+
     return (_jit->code.ptr);
 }
 
@@ -1220,6 +1222,11 @@ _emit_code(jit_state_t *_jit)
 #  include "jit_alpha-cpu.c"
 #  include "jit_alpha-fpu.c"
 #undef CODE
+
+void
+jit_flush(void *fptr, void *tptr)
+{
+}
 
 void
 _emit_ldxi(jit_state_t *_jit, jit_int32_t r0, jit_int32_t r1, jit_word_t i0)
